fix: whitespace no wrap for prism

--- a/assets/scss/elements/_prism.custom.scss
+++ b/assets/scss/elements/_prism.custom.scss
@@ -85,6 +85,10 @@ pre[class*="language-"] {
 	opacity: .7;
 }
 
+.token {
+	white-space: nowrap;
+}
+
 .token.property,
 .token.tag,
 .token.boolean,
